Logging errors added to user directory in app data with the rest of the info.